[package]
name = "tutorial_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"
anyhow = "1.0.61"
bracket-lib = "0.8.1"

[[bin]]
name = "bot_server"
path = "src/server.rs"

[lib]
name = "bot_lib"
path = "src/lib.rs"
